--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>扑克对战游戏 - React版</title>
+    <title>扑克对战游戏</title>
     <link rel="stylesheet" href="/style.css">
     <style>
         body {
